hopefully fixed the clipboard icon overflowing

--- a/Back_End (Flask)/static/style.css
+++ b/Back_End (Flask)/static/style.css
@@ -99,16 +99,19 @@ nav {
   height: auto;
 }
 .bottom-clipboard {
-  width: 256px;
+  width: 300px;
   height: 262px;
   bottom: 1%;
   position: absolute;
   left: 2%;
   z-index: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .bottom-clipboard img {
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
   transform: rotate(-18.85deg);
 }
 
